methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: ')' expected but ';' found.
                                      {if (!(estFaceMur();)) {avance();}
                                                         ^SlugTracking:5: error: illegal start of statement
                                      {if (!(estFaceMur();)) {avance();}
                                                          ^